# DittoDatto

./: .gitignore  analysis_options.yaml  docker-compose.test.yml  grill_strategy.md  history.txt  pubspec.yaml  saturn-setup-runbook.md  setup-flutter-dev.sh
.agents/: AGENTS.md
.saropa/: vibrancy-history.json
DittoDatto-old/: .gitignore
DittoDatto-old/services/mercury-engine/: README.md  pyproject.toml
DittoDatto-old/services/mercury-engine/src/mercury_core/: __init__.py  errors.py
DittoDatto-old/services/mercury-engine/src/mercury_core/availability/: __init__.py  context.py  resources.py  staff.py
DittoDatto-old/services/mercury-engine/src/mercury_core/calculators/: __init__.py  hold.py  slots.py
DittoDatto-old/services/mercury-engine/src/mercury_core/models/: __init__.py  category.py  company.py  customer.py  hold.py  staff.py  user.py
DittoDatto-old/services/mercury-engine/src/mercury_core/repositories/: categories.py  companies.py  customers.py  staff.py
DittoDatto-old/services/mercury-engine/src/mercury_engine/: config.py  main.py
DittoDatto-old/services/mercury-engine/src/mercury_engine/auth/: __init__.py
DittoDatto-old/services/mercury-engine/src/mercury_engine/db/: record.py
DittoDatto-old/services/mercury-engine/src/mercury_engine/db/adapters/: base_adapter.py  booking_adapter.py  company_adapter.py  establishment_adapter.py  hold_adapter.py  resource_adapter.py
DittoDatto-old/services/mercury-engine/src/mercury_engine/routes/: admin.py  auth.py  health.py  holds.py  staff.py
DittoDatto-old/services/mercury-engine/tests/: conftest.py  test_errors.py  test_health.py  test_time.py
DittoDatto-old/services/mercury-engine/tests/auth/: test_middleware.py
DittoDatto-old/services/mercury-engine/tests/availability/: __init__.py  test_resources.py
DittoDatto-old/services/mercury-engine/tests/calculators/: test_booking.py  test_slots.py
DittoDatto-old/services/mercury-engine/tests/integration/: __init__.py  test_auth_flow.py  test_establishment_adapter.py  test_hold_adapter.py  test_service_adapter.py  test_staff_adapter.py
DittoDatto-old/services/mercury-engine/tests/models/: test_category.py  test_company.py
DittoDatto-old/services/mercury-engine/tests/repositories/: test_repository_abcs.py
conductor/: business-portal-prd.md  context.md  index.md  prd.md  project-context.md  pulse.md  relay.md  tracks.md  workflow.md
schemas/: README.md  (+5 more)
services/mercury-engine/: pyproject.toml
services/mercury-engine/conductor/: index.md  project-context.md  pulse.md  relay.md  scratchpad.md  tracks.md  workflow.md
services/mercury-engine/conductor/tracks/mercury_migration_20260528/: index.md  metadata.json  plan.md  spec.md
services/mercury-engine/src/mercury_engine/: __init__.py
(+1818 files in other folders)
