[project]
name = "mercury-engine"
version = "2.0.0-dev"
description = "MercuryEngine V2 — The booking, discovery, and CRUD engine for DittoDatto."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.11",
]
