[project]
name = "mercury-engine"
version = "1.0.0-dev"
description = "MercuryEngine 1.0 — The greenfield booking-only engine for DittoDatto."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.2.1",
    "bcrypt>=4.1.2",
    "pyjwt>=2.8.0",
    "surrealdb>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mercury_engine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["B008"]
