[project]
name = "mercury-engine"
version = "2.0.0a1"
description = "MercuryEngine V2 — Booking engine for DittoDatto (Python/FastAPI/Pydantic/SurrealDB)"
readme = "README.md"
authors = [
    { name = "Arnar Valur Jónsson", email = "arnarvalur@avj.info" }
]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "pyjwt>=2.12.1",
    "surrealdb>=2.0.0",
]

[project.scripts]
mercury-engine = "mercury_engine.main:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live SurrealDB on localhost:8000",
]


[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Depends() in function defaults by design
"src/mercury_engine/routes/*.py" = ["B008"]
"src/mercury_engine/dependencies.py" = ["B008"]
"src/mercury_engine/auth/middleware.py" = ["B008"]
"tests/auth/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
